# game-2DD

./: .clang-format  .gitignore  Architecture-EndlessRunner.canvas  Architecture-EndlessRunner.md  CMakeLists.txt  CMakePresets.json  Chưa đặt tên.md  README.md  game-architecture.drawio.txt  game-diff.drawio.txt  game-erd.drawio.txt  game-heatmap.drawio.txt  game-sequence.drawio.txt  oop-python-grouped.drawio.txt  oop-python.drawio.txt
.github/workflows/: ci.yml
.obsidian/: workspace.json
assets/tilemaps/: test_world.json
cmake/: CompilerWarnings.cmake  Dependencies.cmake  Packaging.cmake  Sanitizers.cmake
docs/: CodingStandard.md  Project Tree.canvas  Skills-Overview.md  architecture-gap-analysis.md  game-architecture-overview.md
docs/ADR/: 001-use-catch2.md
docs/architecture/: Architecture Pitfalls.md  Design Patterns.md  Design Philosophy.md  Development Roadmap.md  Directory Structure.md  Event System.md  Gameplay Systems.md  Layer Architecture.md  Memory & Performance.md  Module Dependency Graph.md  Resource Management.md  Runtime Flow.md  Testing Strategy.md  Third Party Libraries.md
docs/superpowers/plans/: 2026-07-03-phase1-project-setup.md  2026-07-03-phase2-sdl3-window.md  2026-07-03-phase3-rendering.md  2026-07-03-phase4-input.md  2026-07-03-phase6-physics.md
scripts/: check_layer_deps.py  format.sh  gen_bitmap_font.py
skills/demo/: game-architecture.json
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  core.hpp  dummy.cpp
src/core/config/: ConfigTypes.hpp
src/core/ecs/: EcsFwd.hpp  Registry.hpp
src/core/events/: EventBus.hpp  IEvent.hpp
src/core/math/: Math.hpp  Rect.hpp  Vec2.hpp
src/engine/: CMakeLists.txt  engine.hpp
src/engine/animation/: AnimationController.cpp  AnimationController.hpp
src/engine/application/: Application.cpp  Application.hpp  ApplicationDrawing.cpp  ApplicationParticles.cpp  ApplicationTextures.cpp  IApplication.hpp
src/engine/audio/: IAudioDevice.hpp
src/engine/camera/: Camera.hpp
src/engine/input/: IInputDevice.hpp  KeyEvent.hpp
src/engine/physics/: CollisionSystem.cpp  CollisionSystem.hpp  PhysicsComponents.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp
src/engine/platform/: CMakeLists.txt
src/engine/platform/sdl3/: SDLInputDevice.cpp  SDLInputDevice.hpp  SDLRenderer.cpp  SDLRenderer.hpp  SDLWindow.cpp  SDLWindow.hpp
src/engine/renderer/: BitmapFont.hpp  IRenderer.hpp  RenderComponents.hpp  RenderSystem.cpp  RenderSystem.hpp  TextRenderer.cpp  TextRenderer.hpp
src/engine/resource/: IAssetLoader.hpp
src/engine/save/: SaveManager.cpp  SaveManager.hpp
src/engine/scene/: GameStateMachine.cpp  GameStateMachine.hpp  IScene.hpp  SceneManager.hpp
src/engine/tilemap/: Tilemap.hpp  TilemapLoader.cpp  TilemapRenderer.cpp
src/game/: CMakeLists.txt  game.hpp
src/game/achievement/: AchievementSystem.cpp  AchievementSystem.hpp
src/game/ai/: BossFSM.cpp  BossFSM.hpp  EnemyFSM.cpp  EnemyFSM.hpp
src/game/checkpoint/: CheckpointSystem.cpp  CheckpointSystem.hpp
src/game/combat/: CombatComponent.hpp  CombatSystem.cpp  CombatSystem.hpp
src/game/dialogue/: DialogueData.hpp  DialogueEvents.hpp  DialogueSystem.cpp  DialogueSystem.hpp
src/game/enemy/: EnemyComponent.hpp
src/game/engine_impl/: MenuState.cpp  MenuState.hpp
src/game/input/: InputCommand.hpp  InputMapper.cpp  InputMapper.hpp
src/game/interaction/: InteractionSystem.cpp  InteractionSystem.hpp
src/game/inventory/: InventorySystem.cpp  InventorySystem.hpp
src/game/item/: ItemComponent.hpp  ItemDatabase.cpp  ItemDatabase.hpp
src/game/npc/: NPCComponent.hpp
src/game/obstacles/: Obstacle.hpp
src/game/player/: Player.hpp  PlayerAnimationBindings.cpp  PlayerAnimationBindings.hpp  PlayerMovement.cpp  PlayerMovement.hpp
src/game/quest/: QuestData.hpp  QuestSystem.cpp  QuestSystem.hpp
src/game/save/: GameSaveData.cpp  GameSaveData.hpp
src/game/scoring/: ScoreSystem.hpp
src/game/states/: ExplorationState.cpp  ExplorationState.hpp  GameOverState.cpp  GameOverState.hpp  GameState.hpp  PausedState.cpp  PausedState.hpp
src/game/ui/: DialogueUI.cpp  DialogueUI.hpp  InventoryUI.cpp  InventoryUI.hpp  MinimapUI.cpp  MinimapUI.hpp  QuestLogUI.cpp  QuestLogUI.hpp
src/game/world/: PortalComponent.hpp  PortalSystem.cpp  PortalSystem.hpp
tests/: CMakeLists.txt  main.cpp
tests/unit/core/: test_eventbus.cpp  test_rect.cpp  test_vec2.cpp
tests/unit/engine/: test_camera.cpp  test_layer_stubs.cpp
